did formatting of top header. still need to fix some spacing and do other sections

--- a/style.css
+++ b/style.css
@@ -4,14 +4,40 @@ body {
     
 }
 
-.mainheader {
+.header {
     background-color: #1f2937;
+}
+
+.topheader {
+    display: flex;
+    justify-content: space-between;
+    margin: 0px 150px;
+}
+
+.mainheader {
     color: #F9FAF8;
     font-size: 48px;
     font-weight: 800;
+    display: flex;
 }
 
 img {
     height: 100px;
     width: auto;
+}
+
+a, .subtext {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.links {
+    display: flex;
+    gap: 20px;
 }
